crates/gpui_tea/tests/ui/missing_message.stderr
error: missing `message`
  --> tests/ui/missing_message.rs:17:10
   |
17 | #[derive(Composite)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `Composite` (in Nightly builds, run with -Z macro-backtrace for more info)
